fixing a css overflow issue with too much text

--- a/app/src/pages/view/v1/components/pageOne/components/rightColumn/components/weaponTables/WeaponsTables.css
+++ b/app/src/pages/view/v1/components/pageOne/components/rightColumn/components/weaponTables/WeaponsTables.css
@@ -13,7 +13,11 @@
 }
 
 .weapons-table-shell>p {
-    min-height: 18px;
+    height: 18px;
+    overflow: hidden;
+    white-space: nowrap;
+    max-width: 159px;
+    text-overflow: ellipsis;
 }
 
 .weapons-table-shell>div {
